--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "mouse endurance race",
+  "name": "mouse-endurance-test",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Mouse endurance test",
+  "author": "Erik",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "gh-pages": "vite build && gh-pages -d dist",
     "preview": "vite preview"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
+    "gh-pages": "^6.1.0",
     "vite": "^5.0.8"
   }
 }
